# teller

./: BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/teller/: BUILD.bazel  main.go  print.go  total.go
pkg/dbs/: BUILD.bazel  dbs.go
pkg/statement/: BUILD.bazel  parse.go  statement.go
pkg/statement/dbs/: dbs.go
