load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "teller_lib",
    srcs = [
        "main.go",
        "total.go",
    ],
    importpath = "github.com/yobrosoft/teller/cmd/teller",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/dbs",
        "//pkg/statement",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "teller",
    embed = [":teller_lib"],
    visibility = ["//visibility:public"],
)
